--- a/Odelia/style.css
+++ b/Odelia/style.css
@@ -36,8 +36,8 @@ p:last-child {
 #message {
   position: absolute;
   width: 450px;
+  height: 0px;
   left: 50%;
-  top: 50%;
   transform: translate(-50%, -50%);
 }
 
