--- a/Odelia/style.css
+++ b/Odelia/style.css
@@ -47,6 +47,7 @@ p:last-child {
   border: 1px solid #e9e9e9;
   bottom: 0;
   padding: 10px 15px 10px 15px;
+  margin-top: 25px;
 }
 
 #container {
