--- a/Odelia/style.css
+++ b/Odelia/style.css
@@ -1,8 +1,8 @@
 body {
-  overflow: hidden;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 p,
@@ -34,11 +34,9 @@ p:last-child {
 }
 
 #message {
-  position: absolute;
+  position: relative;
   width: 450px;
-  height: 0px;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  padding-bottom: 6rem;
 }
 
 #animate {
@@ -51,23 +49,13 @@ p:last-child {
 }
 
 #container {
-  height: 100vh;
+  min-height: 100vh;
+  height: fit-content;
   width: 100vw;
   background-color: #050505;
-}
-
-@-webkit-keyframes blink {
-  0% {
-    opacity: 1.0;
-  }
-
-  50% {
-    opacity: 0.0;
-  }
-
-  100% {
-    opacity: 1.0;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 @keyframes blink {
@@ -83,3 +71,4 @@ p:last-child {
     opacity: 1.0;
   }
 }
+
